# acp-sdk

./: .gitignore  .gitmodules  Makefile  pyproject.toml
.github/workflows/: pypi.yml  run_check.yml
acp-sdk/: Makefile  pyproject.toml
acp-sdk/acp_sdk/: __init__.py
acp-sdk/tests/: test_acp_client.py  test_manifest_validator.py
acp_sdk/: __init__.py  __main__.py
acp_sdk/acp_v0/: __init__.py
acp_sdk/descriptor/: generator.py  validator.py
acp_sdk/langgraph/: acp_node.py  api_bridge.py  io_mapper.py
agntcy_acp/: __init__.py  auth.py  authorization.py  client.py
agntcy_acp/acp_v0/: configuration.py  (+1 more)
docs/: authorization.md  building.md  index.html
examples/: README.md  async_authorization_example.py  auth_demo.py  authorization_example.py  authzen_demo.py  manifest-with-permissions.yaml
examples/marketing-campaign/: README.md  pyproject.toml
examples/marketing-campaign/deploy/: .marketing_campaign.env  email_reviewer.json  marketing-campaign.json  sendgrid.json
examples/marketing-campaign/manifests/: mailcomposer.json
examples/marketing-campaign/src/marketing_campaign/: __main__.py  app.py  client_main.py  email_reviewer.py  generate_manifest.py  iomappers.py  maa.py  mailcomposer.py  main_acp_client.py  main_langgraph.py  sdk.py  sendgrid.py  state.py
examples/marketing-campaign/src/ui/: home.py
scripts/: check-models.sh  generate_model_autodoc.sh
templates/: api_client.mustache
test-client/: pyproject.toml
tests/: conftest.py  test_acp_async_client.py  test_acp_client.py  test_configuration.py  test_model_generator.py  utils.py
(+318 files in other folders)
